[tool.poetry]
name = "toltool"
version = "0.1.0"
description = ""
authors = ["Frederic Vogels <frederic.vogels@ucll.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
unidecode = "^1.3.6"
pydantic = "^1.10.9"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toltool = 'toltool.cli:process_command_line_arguments'
